# Hork-Samples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
00_Empty/: Application.cpp  CMakeLists.txt
01_HelloWorld/: Application.cpp  CMakeLists.txt
01_Simple/: CMakeLists.txt  Module.cpp
02_CharacterController/: CMakeLists.txt  Character.cpp  Character.h  Module.cpp  Platform.cpp  Platform.h
02_FirstPersonShooter/: Application.cpp  Application.h  CMakeLists.txt
03_ThirdPerson/: Application.cpp  Application.h  CMakeLists.txt
03_Triggers/: CMakeLists.txt  Character.h  Door.cpp  Door.h  Emitter.cpp  Emitter.h  Module.cpp  Trigger.cpp  Trigger.h
04_RenderToTexture/: Application.cpp  Application.h  CMakeLists.txt
04_Terrain/: CMakeLists.txt  Module.cpp  Spectator.cpp  Spectator.h
04_Terrain/res/: resource.h
05_NavMesh/: Application.cpp  Application.h  CMakeLists.txt
05_ProceduralMesh/: CMakeLists.txt  Character.h  MetaballController.cpp  MetaballController.h  Metaballs.cpp  Metaballs.h  Module.cpp
05_ProceduralMesh/res/: resource.rc
06_TwoPlayers/: CMakeLists.txt  Character.h  Module.cpp  Platform.cpp  Platform.h
07_IesProfiles/: Application.cpp  Application.h  CMakeLists.txt
07_SkeletalAnimation/: BrainStem.cpp  BrainStem.h  CMakeLists.txt  Character.h  Module.cpp
08_MoviePlayer/: Application.cpp  Application.h  CMakeLists.txt
08_RenderToTexture/: CMakeLists.txt  Character.h  Module.cpp
09_GifPlayer/: Application.cpp  Application.h  CMakeLists.txt
Common/: Character.cpp  Character.h  CollisionLayer.h  EntryPoint.h  Spectator.cpp  Spectator.h
Common/Components/: JumpadComponent.h  LifeSpanComponent.h  PlayerInputComponent.h  TeleporterComponent.h
Common/Lexer/: Lexer.cpp  Lexer.h
Common/MapParser/: MapGeometry.cpp  MapGeometry.h  MapParser.cpp  Utils.cpp  Utils.h
Data/: config.cfg  sample2.map
Data/Skybox/: skybox_matinst.minst
Data/default/: box.mesh  capsule.mesh  cone.mesh  cylinder.mesh  plane_xy.mesh  plane_xz.mesh  quad_xy.mesh  quad_xz.mesh  skybox.mesh  skydome.mesh  skydome_hemisphere.mesh  sphere.mesh
Data/default/materials/: default.mat  default.mlib  default_unlit.mat  skybox.mat
Data/default/materials/mg/: default.mg  pbr_base_color.mg  unlit.mg  unlit_clamped.mg
Data/envmaps/: sample.envmap
Data/materials/: sample_material_graph.mgraph
Data/models/BrainStem/source/: LICENSE.txt
Source/Common/: CollisionLayer.h
Source/Common/Components/: DoorComponent.h  ElevatorComponent.h  FirstPersonComponent.cpp  FirstPersonComponent.h  JumpadComponent.h  LifeSpanComponent.h  LightAnimator.h  PlayerTeam.h  ProjectileComponent.cpp  ProjectileComponent.h  TeleporterComponent.h  ThirdPersonComponent.cpp  ThirdPersonComponent.h
Source/Common/MapParser/: MapGeometry.cpp  MapParser.h  Utils.cpp  Utils.h
